# iq-tester-game

./: .gitignore  CHANGELOG.md  README.md  board.py  game.py  play.py  pyproject.toml  session.py  setup.py
.github/ISSUE_TEMPLATE/: publish-new-version.md
.github/workflows/: tests.yml
src/iq-tester/: __main__.py  board.py  game.py  session.py
src/iqtester/: board.py  formatter.py  game.py  session.py
tests/: test_session.py  test_session_general.py  test_session_settings.py
tools/: board.py  formatter.py  game.py  session.py
